--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,5 @@
 plugins {
-	id 'fabric-loom' version '0.8-SNAPSHOT'
+	id 'loomcn' version '0.9-SNAPSHOT'
 	id 'maven-publish'
 }
 
@@ -16,12 +16,12 @@ repositories {
 	// Loom adds the essential maven repositories to download Minecraft and libraries from automatically.
 	// See https://docs.gradle.org/current/userguide/declaring_repositories.html
 	// for more information about repositories.
-	maven {
-        url 'https://maven.aliyun.com/nexus/content/groups/public'
-    }
-    maven {
-        url 'https://repository.hanbings.io/proxy'
-    }
+//	maven {
+//        url 'https://maven.aliyun.com/nexus/content/groups/public'
+//    }
+//    maven {
+//        url 'https://repository.hanbings.io/proxy'
+//    }
 }
 
 dependencies {
