--- a/gradle.properties
+++ b/gradle.properties
@@ -4,13 +4,18 @@ org.gradle.jvmargs=-Xmx1G
 # Fabric Properties
 	# check these on https://fabricmc.net/versions.html
 	minecraft_version=1.17.1
-	yarn_mappings=1.17.1+build.14
+	yarn_mappings=1.17.1+build.49
 	loader_version=0.11.6
 
 # Mod Properties
-	mod_version = 1.2.0-mc1.17
+	mod_version = 1.2.1-mc1.17
 	maven_group = pers.solid.extshape
 	archives_base_name = extshape
 
 # Dependencies
-	fabric_version=0.37.0+1.17
+	fabric_version=0.40.0+1.17
+
+loom_resources_base = https://download.mcbbs.net/assets/
+loom_version_manifests = https://bmclapi2.bangbang93.com/mc/game/version_manifest.json
+loom_experimental_versions = https://maven.fabricmc.net/net/minecraft/experimental_versions.json
+loom_fabric_repository = https://repository.hanbings.io/proxy/
