--- a/settings.gradle
+++ b/settings.gradle
@@ -1,9 +1,25 @@
 pluginManagement {
     repositories {
+
+        // 存放 fabricloomCN 的主仓库
+        maven {
+            name = 'Iced\'s loom maven'
+            url = 'https://maven.icedlab.tech/loom/'
+        }
+
+        // 存放 fabricloomCN 的代理仓库
+        maven {
+            name = 'Hanbing\'s proxy maven'
+            url = 'https://repository.hanbings.io/proxy/'
+        }
+
+        // fabricloom 原版的仓库
         maven {
             name = 'Fabric'
-            url = 'https://repository.hanbings.io/proxy'
+            url = 'https://maven.fabricmc.net/'
         }
+
+        // 其余插件所存放的仓库
         gradlePluginPortal()
     }
 }
