--- a/gradle.properties
+++ b/gradle.properties
@@ -6,7 +6,7 @@ minecraft_version=1.17.1
 yarn_mappings=1.17.1+build.65
 loader_version=0.13.1
 # Mod Properties
-mod_version=1.4.0-mc1.17+
+mod_version=1.4.0-mc1.17.1
 maven_group=pers.solid.extshape
 archives_base_name=extshape
 # Dependencies
