--- a/gradle.properties
+++ b/gradle.properties
@@ -1,16 +1,16 @@
 # Done to increase the memory available to gradle.
 org.gradle.jvmargs=-Xmx1G
 # Fabric Properties
-# check these on https://fabricmc.net/versions.html
-minecraft_version=1.17.1
-yarn_mappings=1.17.1+build.65
+# check these on https://fabricmc.net/develop/
+minecraft_version=1.18.1
+yarn_mappings=1.18.1+build.22
 loader_version=0.13.1
 # Mod Properties
-mod_version=1.4.0-mc1.17+
+mod_version=1.4.0-mc1.18.1
 maven_group=pers.solid.extshape
 archives_base_name=extshape
 # Dependencies
-fabric_version=0.46.1+1.17
+fabric_version=0.46.4+1.18
 loom_resources_base=https://download.mcbbs.net/assets/
 loom_version_manifests=https://bmclapi2.bangbang93.com/mc/game/version_manifest.json
 loom_experimental_versions=https://maven.fabricmc.net/net/minecraft/experimental_versions.json
