--- a/gradle.properties
+++ b/gradle.properties
@@ -1,12 +1,12 @@
 # Done to increase the memory available to gradle.
 org.gradle.jvmargs=-Xmx1G
 # Fabric Properties
-# check these on https://fabricmc.net/versions.html
+# check these on https://fabricmc.net/develop/
 minecraft_version=1.17.1
 yarn_mappings=1.17.1+build.65
-loader_version=0.13.1
+loader_version=0.13.3
 # Mod Properties
-mod_version=1.4.0-mc1.17.1
+mod_version=1.5.0-mc1.17.1
 maven_group=pers.solid.extshape
 archives_base_name=extshape
 # Dependencies
