--- a/gradle.properties
+++ b/gradle.properties
@@ -6,7 +6,7 @@ minecraft_version=1.18.1
 yarn_mappings=1.18.1+build.22
 loader_version=0.13.3
 # Mod Properties
-mod_version=1.5.0-mc1.18.1
+mod_version=1.5.0-snapshot.1-mc1.18.1
 maven_group=pers.solid.extshape
 archives_base_name=extshape
 # Dependencies
