--- a/gradle.properties
+++ b/gradle.properties
@@ -2,15 +2,17 @@
 org.gradle.jvmargs=-Xmx1G
 # Fabric Properties
 # check these on https://fabricmc.net/develop/
-minecraft_version=1.18.2
-yarn_mappings=1.18.2+build.3
+minecraft_version=1.19-pre2
+yarn_mappings=1.19-pre2+build.1
 loader_version=0.14.6
 # Mod Properties
 mod_version=1.5.0-mc1.18.2
 maven_group=pers.solid.extshape
 archives_base_name=extshape
 # Dependencies
-fabric_version=0.53.3+1.18.2
+fabric_version=0.53.3+1.19
+modmenu_version=4.0.0-beta.4
+brrp_version=0.6.2-1.19-pre2
 loom_resources_base=https://download.mcbbs.net/assets/
 loom_version_manifests=https://bmclapi2.bangbang93.com/mc/game/version_manifest.json
 loom_experimental_versions=https://maven.fabricmc.net/net/minecraft/experimental_versions.json
