--- a/gradle.properties
+++ b/gradle.properties
@@ -6,7 +6,7 @@ minecraft_version=1.18.2
 yarn_mappings=1.18.2+build.3
 loader_version=0.14.6
 # Mod Properties
-mod_version=1.5.0-mc1.18.2
+mod_version=1.5.1-build.1-mc1.18.2
 maven_group=pers.solid.extshape
 archives_base_name=extshape
 # Dependencies
