--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,5 @@
 plugins {
-    id 'fabric-loom' version '0.11-SNAPSHOT'
+    id 'fabric-loom' version '0.12-SNAPSHOT'
     id 'maven-publish'
 }
 
@@ -7,7 +7,7 @@ sourceCompatibility = JavaVersion.VERSION_16
 targetCompatibility = JavaVersion.VERSION_16
 
 archivesBaseName = project.archives_base_name
-version = project.mod_version
+version = project.mod_version + '-mc' + project.minecraft_version
 group = project.maven_group
 
 repositories {
@@ -41,7 +41,8 @@ dependencies {
     // ModMenu 模组，最后一个兼容 1.17.1 的是 2.0.14
     modImplementation "com.terraformersmc:modmenu:2.0.14"
     // BRRP 模组
-    modImplementation "net.devtech:brrp:0.6.2-1.17.1"
+    def brrp_mc_version = project.getProperties().getOrDefault("brrp_mc_version", project.minecraft_version)
+    modImplementation "net.devtech:brrp:${project.brrp_version}-${brrp_mc_version}"
 }
 
 processResources {
@@ -80,13 +81,7 @@ jar {
 publishing {
     publications {
         mavenJava(MavenPublication) {
-            // add all the jars that should be included when publishing to maven
-            artifact(remapJar) {
-                builtBy remapJar
-            }
-            artifact(sourcesJar) {
-                builtBy remapSourcesJar
-            }
+            from components.java
         }
     }
 
