更新 Yarn、Loader 和 API 的版本

--- a/gradle.properties
+++ b/gradle.properties
@@ -4,18 +4,18 @@ org.gradle.jvmargs=-Xmx1G
 # Fabric Properties
 # check these on https://fabricmc.net/develop/
 minecraft_version=1.19
-yarn_mappings=1.19+build.1
-loader_version=0.14.6
+yarn_mappings=1.19+build.4
+loader_version=0.14.8
 
 # Mod Properties
-mod_version=1.5.1-mc1.19
+mod_version=1.5.2
 maven_group=pers.solid.extshape
 archives_base_name=extshape
 
 # Dependencies
-fabric_version=0.55.1+1.19
-modmenu_version=4.0.0-beta.4
-brrp_version=0.6.2-1.19
+fabric_version=0.56.1+1.19
+modmenu_version=4.0.0
+brrp_version=0.7.0
 
 #loom_resources_base=https://download.mcbbs.net/assets/
 #loom_version_manifests=https://bmclapi2.bangbang93.com/mc/game/version_manifest.json
