--- a/build.gradle
+++ b/build.gradle
@@ -1,12 +1,12 @@
 plugins {
-    id 'fabric-loom' version '0.12-SNAPSHOT'
+    id 'dev.architectury.loom' version '0.12.0-SNAPSHOT'
     id 'maven-publish'
 }
 
 sourceCompatibility = JavaVersion.VERSION_16
 targetCompatibility = JavaVersion.VERSION_16
 
-archivesBaseName = project.archives_base_name
+archivesBaseName = project.archives_base_name + "-forge"
 version = project.mod_version + '-mc' + project.minecraft_version
 group = project.maven_group
 
@@ -17,15 +17,12 @@ repositories {
     // See https://docs.gradle.org/current/userguide/declaring_repositories.html
     // for more information about repositories.
 
-    /*maven {
+    maven {
         url 'https://maven.aliyun.com/nexus/content/groups/public'
     }
     maven {
         url 'https://repository.hanbings.io/proxy'
-    }*/
-
-    // Mod Menu 模组
-    maven { url 'https://maven.terraformersmc.com/releases/' }
+    }
     // BRRP 模组，存储于本地
     flatDir { dir '../brrp/build/libs/' }
 }
@@ -34,21 +31,30 @@ dependencies {
     // To change the versions see the gradle.properties file
     minecraft "com.mojang:minecraft:${project.minecraft_version}"
     mappings "net.fabricmc:yarn:${project.yarn_mappings}:v2"
-    modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"
 
-    // Fabric API
-    modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
-    // ModMenu 模组，最后一个兼容 1.17.1 的是 2.0.14
-    modImplementation "com.terraformersmc:modmenu:2.0.14"
+    forge "net.minecraftforge:forge:${project.minecraft_version}-${forge_version}"
     // BRRP 模组
     def brrp_mc_version = project.getProperties().getOrDefault("brrp_mc_version", project.minecraft_version)
-    modImplementation "net.devtech:brrp:${project.brrp_version}-${brrp_mc_version}"
+    modImplementation "net.devtech:brrp-forge:${project.brrp_version}-${brrp_mc_version}"
+}
+
+loom {
+    forge {
+        mixinConfigs = [
+                "extshape.mixin.json"
+        ]
+    }
+    launches {
+        data {
+            arg "--existing", file("src/main/resources").absolutePath
+        }
+    }
 }
 
 processResources {
     inputs.property "version", project.version
 
-    filesMatching("fabric.mod.json") {
+    filesMatching("META-INF/mods.toml") {
         expand "version": project.version
     }
 }
