--- a/gradle.properties
+++ b/gradle.properties
@@ -1,11 +1,12 @@
 # Done to increase the memory available to gradle.
 org.gradle.jvmargs=-Xmx1G
+loom.platform=forge
 
 # Fabric Properties
 # check these on https://fabricmc.net/develop/
 minecraft_version=1.19
 yarn_mappings=1.19+build.4
-loader_version=0.14.8
+forge_version=41.0.91
 
 # Mod Properties
 mod_version=1.5.2
@@ -13,11 +14,9 @@ maven_group=pers.solid.extshape
 archives_base_name=extshape
 
 # Dependencies
-fabric_version=0.56.1+1.19
-modmenu_version=4.0.0
 brrp_version=0.7.0
 
-#loom_resources_base=https://download.mcbbs.net/assets/
-#loom_version_manifests=https://bmclapi2.bangbang93.com/mc/game/version_manifest.json
+loom_resources_base=https://bmclapi2.bangbang93.com/assets/
+loom_version_manifests=https://bmclapi2.bangbang93.com/mc/game/version_manifest_v2.json
 loom_experimental_versions=https://maven.fabricmc.net/net/minecraft/experimental_versions.json
 loom_fabric_repository=https://repository.hanbings.io/proxy/
