--- a/build.gradle
+++ b/build.gradle
@@ -43,6 +43,9 @@ loom {
         mixinConfigs = [
                 "extshape.mixin.json"
         ]
+        convertAccessWideners = true
+        accessWidenerPath = file("src/main/resources/extshape-imported-hidden.accesswidener")
+        extraAccessWideners.add loom.accessWidenerPath.get().asFile.name
     }
     launches {
         data {
@@ -57,8 +60,6 @@ processResources {
     filesMatching("META-INF/mods.toml") {
         expand "version": project.mod_version
     }
-
-    exclude "META_INF/accesstransformer.cfg"
 }
 
 tasks.withType(JavaCompile).configureEach {
@@ -92,6 +93,8 @@ jar {
                 "Implementation-Timestamp": new Date().format("yyyy-MM-dd'T'HH:mm:ssZ")
         ])
     }
+
+    exclude "META-INF/accesstransformer.cfg"
 }
 
 // configure the maven publication
