--- a/gradle.properties
+++ b/gradle.properties
@@ -6,7 +6,7 @@ loom.platform=forge
 # check these on https://fabricmc.net/develop/
 minecraft_version=1.18.2
 yarn_mappings=1.18.2+build.3
-forge_version=40.1.60
+forge_version=40.1.68
 
 # Mod Properties
 mod_version=1.5.2
@@ -14,10 +14,9 @@ maven_group=pers.solid.extshape
 archives_base_name=extshape
 
 # Dependencies
-fabric_version=0.56.1+1.19
-modmenu_version=4.0.0
 brrp_version=0.7.0
 
+loom_libraries_base=https://bmclapi2.bangbang93.com/maven/
 loom_resources_base=https://bmclapi2.bangbang93.com/assets/
 loom_version_manifests=https://bmclapi2.bangbang93.com/mc/game/version_manifest_v2.json
 loom_experimental_versions=https://maven.fabricmc.net/net/minecraft/experimental_versions.json
