--- a/gradle.properties
+++ b/gradle.properties
@@ -7,6 +7,7 @@ loom.platform=forge
 minecraft_version=1.17.1
 yarn_mappings=1.17.1+build.65
 forge_version=37.1.1
+
 # Mod Properties
 mod_version=1.5.2
 maven_group=pers.solid.extshape
@@ -15,6 +16,7 @@ archives_base_name=extshape
 # Dependencies
 brrp_version=0.7.0
 
+loom_libraries_base=https://bmclapi2.bangbang93.com/maven/
 loom_resources_base=https://bmclapi2.bangbang93.com/assets/
 loom_version_manifests=https://bmclapi2.bangbang93.com/mc/game/version_manifest_v2.json
 loom_experimental_versions=https://maven.fabricmc.net/net/minecraft/experimental_versions.json
