--- a/gradle.properties
+++ b/gradle.properties
@@ -6,7 +6,7 @@ loom.platform=forge
 # check these on https://fabricmc.net/develop/
 minecraft_version=1.19
 yarn_mappings=1.19+build.4
-forge_version=41.0.94
+forge_version=41.0.100
 
 # Mod Properties
 mod_version=1.5.2
@@ -16,6 +16,7 @@ archives_base_name=extshape
 # Dependencies
 brrp_version=0.7.0
 
+loom_libraries_base=https://bmclapi2.bangbang93.com/maven/
 loom_resources_base=https://bmclapi2.bangbang93.com/assets/
 loom_version_manifests=https://bmclapi2.bangbang93.com/mc/game/version_manifest_v2.json
 loom_experimental_versions=https://maven.fabricmc.net/net/minecraft/experimental_versions.json
