--- a/gradle.properties
+++ b/gradle.properties
@@ -9,12 +9,13 @@ yarn_mappings=1.17.1+build.65
 forge_version=37.1.1
 
 # Mod Properties
-mod_version=1.5.2
+mod_version=1.6.0
 maven_group=pers.solid.extshape
 archives_base_name=extshape
 
 # Dependencies
 brrp_version=0.7.0
+reasonable_sorting_version=2.0.1
 
 loom_libraries_base=https://bmclapi2.bangbang93.com/maven/
 loom_resources_base=https://bmclapi2.bangbang93.com/assets/
