--- a/gradle.properties
+++ b/gradle.properties
@@ -8,7 +8,7 @@ yarn_mappings=1.18.2+build.3
 loader_version=0.14.8
 
 # Mod Properties
-mod_version=1.5.2
+mod_version=2.0.0-build.1
 maven_group=pers.solid.extshape
 archives_base_name=extshape
 
@@ -16,8 +16,10 @@ archives_base_name=extshape
 fabric_version=0.58.0+1.18.2
 modmenu_version=3.2.3
 brrp_version=0.7.0
+reasonable_sorting_version=2.0.1
 
-#loom_resources_base=https://download.mcbbs.net/assets/
-#loom_version_manifests=https://bmclapi2.bangbang93.com/mc/game/version_manifest.json
+loom_libraries_base=https://bmclapi2.bangbang93.com/maven/
+loom_resources_base=https://bmclapi2.bangbang93.com/assets/
+loom_version_manifests=https://bmclapi2.bangbang93.com/mc/game/version_manifest_v2.json
 loom_experimental_versions=https://maven.fabricmc.net/net/minecraft/experimental_versions.json
 loom_fabric_repository=https://repository.hanbings.io/proxy/
