--- a/gradle.properties
+++ b/gradle.properties
@@ -9,7 +9,7 @@ yarn_mappings=1.19+build.4
 forge_version=41.0.100
 
 # Mod Properties
-mod_version=2.0.0-build.1
+mod_version=1.6.0
 maven_group=pers.solid.extshape
 archives_base_name=extshape
 
