--- a/gradle.properties
+++ b/gradle.properties
@@ -8,7 +8,7 @@ yarn_mappings=1.18.2+build.3
 loader_version=0.14.8
 
 # Mod Properties
-mod_version=2.0.0-build.1
+mod_version=1.6.0
 maven_group=pers.solid.extshape
 archives_base_name=extshape
 
