--- a/build.gradle
+++ b/build.gradle
@@ -20,9 +20,9 @@ repositories {
     maven {
         url 'https://maven.aliyun.com/nexus/content/groups/public'
     }
-    maven {
-        url 'https://repository.hanbings.io/proxy'
-    }
+//    maven {
+//        url 'https://repository.hanbings.io/proxy'
+//    }
 
     // 合理排序模组依赖的 Cloth Config
     maven { url "https://maven.shedaniel.me/" }
