--- a/gradle.properties
+++ b/gradle.properties
@@ -6,19 +6,19 @@ loom.platform=forge
 # check these on https://fabricmc.net/develop/
 minecraft_version=1.19
 yarn_mappings=1.19+build.4
-forge_version=41.0.110
+forge_version=41.1.0
 
 # Mod Properties
-mod_version=1.6.0
+mod_version=1.6.1
 maven_group=pers.solid.extshape
 archives_base_name=extshape
 
 # Dependencies
 brrp_version=0.7.0
-reasonable_sorting_version=2.0.1
+reasonable_sorting_version=2.0.3
 
 loom_libraries_base=https://bmclapi2.bangbang93.com/maven/
 loom_resources_base=https://bmclapi2.bangbang93.com/assets/
 loom_version_manifests=https://bmclapi2.bangbang93.com/mc/game/version_manifest_v2.json
 loom_experimental_versions=https://maven.fabricmc.net/net/minecraft/experimental_versions.json
-loom_fabric_repository=https://repository.hanbings.io/proxy/
+#loom_fabric_repository=https://repository.hanbings.io/proxy/
