--- a/gradle.properties
+++ b/gradle.properties
@@ -5,7 +5,8 @@ org.gradle.jvmargs=-Xmx1G
 # check these on https://fabricmc.net/develop/
 minecraft_version=1.18.1
 yarn_mappings=1.18.1+build.22
-loader_version=0.14.8
+loader_version=0.14.10
+
 # Mod Properties
 mod_version=1.6.0
 maven_group=pers.solid.extshape
@@ -21,4 +22,4 @@ loom_libraries_base=https://bmclapi2.bangbang93.com/maven/
 loom_resources_base=https://bmclapi2.bangbang93.com/assets/
 loom_version_manifests=https://bmclapi2.bangbang93.com/mc/game/version_manifest_v2.json
 loom_experimental_versions=https://maven.fabricmc.net/net/minecraft/experimental_versions.json
-loom_fabric_repository=https://repository.hanbings.io/proxy/
+#loom_fabric_repository=https://repository.hanbings.io/proxy/
