--- a/gradle.properties
+++ b/gradle.properties
@@ -4,8 +4,8 @@ org.gradle.jvmargs=-Xmx1G
 # Fabric Properties
 # check these on https://fabricmc.net/develop/
 minecraft_version=1.18.2
-yarn_mappings=1.18.2+build.3
-loader_version=0.14.8
+yarn_mappings=1.18.2+build.4
+loader_version=0.14.10
 
 # Mod Properties
 mod_version=1.6.0
@@ -13,7 +13,7 @@ maven_group=pers.solid.extshape
 archives_base_name=extshape
 
 # Dependencies
-fabric_version=0.58.0+1.18.2
+fabric_version=0.59.1+1.18.2
 modmenu_version=3.2.3
 brrp_version=0.7.0
 reasonable_sorting_version=2.0.1
@@ -22,4 +22,4 @@ loom_libraries_base=https://bmclapi2.bangbang93.com/maven/
 loom_resources_base=https://bmclapi2.bangbang93.com/assets/
 loom_version_manifests=https://bmclapi2.bangbang93.com/mc/game/version_manifest_v2.json
 loom_experimental_versions=https://maven.fabricmc.net/net/minecraft/experimental_versions.json
-loom_fabric_repository=https://repository.hanbings.io/proxy/
+#loom_fabric_repository=https://repository.hanbings.io/proxy/
