--- a/gradle.properties
+++ b/gradle.properties
@@ -6,6 +6,7 @@ org.gradle.jvmargs=-Xmx1G
 minecraft_version=1.17.1
 yarn_mappings=1.17.1+build.65
 loader_version=0.14.8
+
 # Mod Properties
 mod_version=1.6.0
 maven_group=pers.solid.extshape
@@ -21,4 +22,4 @@ loom_libraries_base=https://bmclapi2.bangbang93.com/maven/
 loom_resources_base=https://bmclapi2.bangbang93.com/assets/
 loom_version_manifests=https://bmclapi2.bangbang93.com/mc/game/version_manifest_v2.json
 loom_experimental_versions=https://maven.fabricmc.net/net/minecraft/experimental_versions.json
-loom_fabric_repository=https://repository.hanbings.io/proxy/
+#loom_fabric_repository=https://repository.hanbings.io/proxy/
