--- a/gradle.properties
+++ b/gradle.properties
@@ -4,20 +4,22 @@ org.gradle.jvmargs=-Xmx1G
 # Fabric Properties
 # check these on https://fabricmc.net/develop/
 minecraft_version=1.19.2
-yarn_mappings=1.19.2+build.20
-loader_version=0.14.9
+loader_version=0.14.10
+yarn_mappings=1.19.2+build.28
+quilt_mappings=21
 
 # Mod Properties
-mod_version=1.6.0
+mod_version=1.7.0
 maven_group=pers.solid.extshape
 archives_base_name=extshape
 
 # Dependencies
-fabric_version=0.62.0+1.19.2
-modmenu_version=4.0.0
-brrp_version=0.7.0
-brrp_mc_version=1.19
+fabric_version=0.64.0+1.19.2
+modmenu_version=4.0.6
+brrp_version=0.8.0-build.2
+brrp_mc_version=1.19.2
 reasonable_sorting_version=2.0.1
+reasonable_sorting_mc_version=1.19
 
 loom_libraries_base=https://bmclapi2.bangbang93.com/maven/
 loom_resources_base=https://bmclapi2.bangbang93.com/assets/
