--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'fabric-loom' version '1.0-SNAPSHOT'
     id 'maven-publish'
+    id 'io.github.juuxel.loom-quiltflower' version '1.7.+'
 }
 
 sourceCompatibility = JavaVersion.VERSION_16
@@ -48,7 +49,8 @@ dependencies {
     def brrp_mc_version = project.properties.getOrDefault "brrp_mc_version", project.minecraft_version
     modImplementation "net.devtech:brrp:${project.brrp_version}-${brrp_mc_version}"
     // 合理排序模组
-    modImplementation "pers.solid.mod:reasonable-sorting-fabric:${project.reasonable_sorting_version}-mc${project.minecraft_version}"
+    def reasonable_sorting_mc_version = project.properties.getOrDefault "reasonable_sorting_mc_version", project.minecraft_version
+    modImplementation "pers.solid.mod:reasonable-sorting-fabric:${project.reasonable_sorting_version}-mc${reasonable_sorting_mc_version}"
 }
 
 processResources {
