--- a/build.gradle
+++ b/build.gradle
@@ -43,7 +43,20 @@ dependencies {
     modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"
 
     // Fabric API
-    modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
+    modImplementation("net.fabricmc.fabric-api:fabric-api:${project.fabric_version}") {
+        exclude module: "fabric-registry-sync-v0"
+        exclude module: "fabric-data-generation-api-v1"
+        exclude module: "fabric-command-api-v2"
+        exclude module: "fabric-resource-loader-v0"
+        exclude module: "fabric-gametest-api-v1"
+        exclude module: "fabric-item-groups-v0"
+        exclude module: "fabric-loot-api-v2"
+        exclude module: "fabric-networking-api-v1"
+        exclude module: "fabric-screen-handler-api-v1"
+        exclude module: "fabric-mining-level-api-v1"
+        exclude module: "fabric-biome-api-v1"
+        exclude module: "fabric-content-registries-v0"
+    }
     // ModMenu 模组
     modImplementation "com.terraformersmc:modmenu:${project.modmenu_version}"
 
@@ -54,7 +67,7 @@ dependencies {
     modImplementation "net.devtech:brrp-fabric:${project.brrp_version}-${brrp_mc_version}"
     // 合理排序模组
     def reasonable_sorting_mc_version = project.properties.getOrDefault "reasonable_sorting_mc_version", project.minecraft_version
-    modImplementation "pers.solid.mod:reasonable-sorting-fabric:${project.reasonable_sorting_version}-mc${reasonable_sorting_mc_version}"
+//    modImplementation "pers.solid.mod:reasonable-sorting-fabric:${project.reasonable_sorting_version}-mc${reasonable_sorting_mc_version}"
 }
 
 processResources {
