--- a/gradle.properties
+++ b/gradle.properties
@@ -3,10 +3,10 @@ org.gradle.jvmargs=-Xmx1G
 
 # Fabric Properties
 # check these on https://fabricmc.net/develop/
-minecraft_version=1.19.2
-supported_minecraft_versions=1.19,1.19.1,1.19.2
+minecraft_version=22w45a
+supported_minecraft_versions=22w45a
 loader_version=0.14.10
-yarn_mappings=1.19.2+build.28
+yarn_mappings=22w42a+build.14
 quilt_mappings=21
 
 # Mod Properties
@@ -16,7 +16,7 @@ archives_base_name=extshape
 
 # Dependencies
 fabric_version=0.66.0+1.19.2
-modmenu_version=4.0.6
+modmenu_version=5.0.0-alpha.2
 brrp_version=0.8.1
 reasonable_sorting_version=2.1.0
 
