--- a/gradle.properties
+++ b/gradle.properties
@@ -16,7 +16,7 @@ archives_base_name=extshape
 # Dependencies
 fabric_version=0.64.0+1.19.2
 modmenu_version=4.0.6
-brrp_version=0.8.0-build.2
+brrp_version=0.8.0
 brrp_mc_version=1.19.2
 reasonable_sorting_version=2.0.1
 reasonable_sorting_mc_version=1.19
