--- a/build.gradle
+++ b/build.gradle
@@ -43,20 +43,7 @@ dependencies {
     modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"
 
     // Fabric API
-    modImplementation("net.fabricmc.fabric-api:fabric-api:${project.fabric_version}") {
-        exclude module: "fabric-registry-sync-v0"
-        exclude module: "fabric-data-generation-api-v1"
-        exclude module: "fabric-command-api-v2"
-        exclude module: "fabric-resource-loader-v0"
-        exclude module: "fabric-gametest-api-v1"
-        exclude module: "fabric-item-groups-v0"
-        exclude module: "fabric-loot-api-v2"
-        exclude module: "fabric-networking-api-v1"
-        exclude module: "fabric-screen-handler-api-v1"
-        exclude module: "fabric-mining-level-api-v1"
-        exclude module: "fabric-biome-api-v1"
-        exclude module: "fabric-content-registries-v0"
-    }
+    modImplementation("net.fabricmc.fabric-api:fabric-api:${project.fabric_version}")
     // ModMenu 模组
     modImplementation "com.terraformersmc:modmenu:${project.modmenu_version}"
 
