--- a/build.gradle
+++ b/build.gradle
@@ -29,10 +29,8 @@ repositories {
     maven { url 'https://maven.terraformersmc.com/releases/' }
     // 合理排序模组依赖的 Cloth Config
     maven { url "https://maven.shedaniel.me/" }
-    // 合理排序模组
+    // 合理排序和 BRRP 模组。这两个模组均存储于本地的 maven 仓库。
     mavenLocal()
-    // BRRP 模组，存储于本地
-    flatDir { dir '../brrp/build/libs/' }
 }
 
 dependencies {
@@ -43,11 +41,14 @@ dependencies {
 
     // Fabric API
     modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
-    // ModMenu 模组，最后一个兼容 1.17.1 的是 2.0.14
-    modImplementation "com.terraformersmc:modmenu:2.0.14"
+    // ModMenu 模组
+    modImplementation "com.terraformersmc:modmenu:${project.modmenu_version}"
+
+    // 下面两个模组均存储于本地的 maven 仓库。
+
     // BRRP 模组
     def brrp_mc_version = project.properties.getOrDefault "brrp_mc_version", project.minecraft_version
-    modImplementation "net.devtech:brrp:${project.brrp_version}-${brrp_mc_version}"
+    modImplementation "net.devtech:brrp-fabric:${project.brrp_version}-${brrp_mc_version}"
     // 合理排序模组
     def reasonable_sorting_mc_version = project.properties.getOrDefault "reasonable_sorting_mc_version", project.minecraft_version
     modImplementation "pers.solid.mod:reasonable-sorting-fabric:${project.reasonable_sorting_version}-mc${reasonable_sorting_mc_version}"
