--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'dev.architectury.loom' version '0.12.0-SNAPSHOT'
     id 'maven-publish'
+    id 'io.github.juuxel.loom-quiltflower' version '1.7.+'
 }
 
 sourceCompatibility = JavaVersion.VERSION_16
@@ -26,10 +27,8 @@ repositories {
 
     // 合理排序模组依赖的 Cloth Config
     maven { url "https://maven.shedaniel.me/" }
-    // 合理排序模组
+    // 合理排序和 BRRP 模组。这两个模组均存储于本地的 maven 仓库。
     mavenLocal()
-    // BRRP 模组，存储于本地
-    flatDir { dir '../brrp/build/libs/' }
 }
 
 dependencies {
@@ -39,11 +38,13 @@ dependencies {
 
     forge "net.minecraftforge:forge:${project.minecraft_version}-${forge_version}"
 
+    // 下面两个模组均存储于本地的 maven 仓库。
     // BRRP 模组
     def brrp_mc_version = project.properties.getOrDefault "brrp_mc_version", project.minecraft_version
     modImplementation "net.devtech:brrp-forge:${project.brrp_version}-${brrp_mc_version}"
     // 合理排序模组
-    modImplementation "pers.solid.mod:reasonable-sorting-forge:${project.reasonable_sorting_version}-mc${project.minecraft_version}"
+    def reasonable_sorting_mc_version = project.properties.getOrDefault "reasonable_sorting_mc_version", project.minecraft_version
+    modImplementation "pers.solid.mod:reasonable-sorting-forge:${project.reasonable_sorting_version}-mc${reasonable_sorting_mc_version}"
 }
 
 loom {
@@ -51,9 +52,9 @@ loom {
         mixinConfigs = [
                 "extshape.mixin.json"
         ]
-        convertAccessWideners = true
-        accessWidenerPath = file("src/main/resources/extshape-imported-hidden.accesswidener")
-        extraAccessWideners.add loom.accessWidenerPath.get().asFile.name
+//        convertAccessWideners = true
+//        accessWidenerPath = file("src/main/resources/extshape-imported-hidden.accesswidener")
+//        extraAccessWideners.add loom.accessWidenerPath.get().asFile.name
     }
     launches {
         data {
