增加日语翻译，并进行微调，并移除了1.19相关内容 修复各形状注册顺序不一致的问题 应用1.18.2之后的译名变更 适应Forge 准备更新至1.7.1 发布 1.7.0 更新至 1.7.0 初步更新至 1.7.0，支持柱子方块的各种形状，目前只对台阶进行了适配；暂未加入与原木、木头有关的标签。 更新用于构建Forge的版本

--- a/gradle.properties
+++ b/gradle.properties
@@ -6,18 +6,18 @@ loom.platform=forge
 # check these on https://fabricmc.net/develop/
 minecraft_version=1.18.2
 yarn_mappings=1.18.2+build.4
-forge_version=40.1.74
+forge_version=40.1.85
 
 # Mod Properties
-mod_version=1.6.1
+mod_version=1.7.1
 maven_group=pers.solid.extshape
 archives_base_name=extshape
 
 # Dependencies
-brrp_version=0.7.0
-reasonable_sorting_version=2.0.3
+brrp_version=0.8.1
+reasonable_sorting_version=2.1.0
 
-loom_libraries_base=https://bmclapi2.bangbang93.com/maven/
+#loom_libraries_base=https://bmclapi2.bangbang93.com/maven/
 loom_resources_base=https://bmclapi2.bangbang93.com/assets/
 loom_version_manifests=https://bmclapi2.bangbang93.com/mc/game/version_manifest_v2.json
 loom_experimental_versions=https://maven.fabricmc.net/net/minecraft/experimental_versions.json
