--- a/gradle.properties
+++ b/gradle.properties
@@ -4,6 +4,7 @@ org.gradle.jvmargs=-Xmx1G
 # Fabric Properties
 # check these on https://fabricmc.net/develop/
 minecraft_version=1.19.2
+supported_minecraft_versions=1.19,1.19.1,1.19.2
 loader_version=0.14.10
 yarn_mappings=1.19.2+build.28
 quilt_mappings=21
