更新构建方式以及语言生成模式

--- a/build.gradle
+++ b/build.gradle
@@ -36,6 +36,20 @@ repositories {
     mavenLocal()
 }
 
+loom {
+    runs {
+        server {
+        }
+        client {
+            programArg "-username=Solid"
+        }
+    }
+
+    runConfigs.configureEach {
+        println it.configName
+    }
+}
+
 dependencies {
     // To change the versions see the gradle.properties file
     minecraft "com.mojang:minecraft:${project.minecraft_version}"
