--- a/gradle.properties
+++ b/gradle.properties
@@ -3,10 +3,10 @@ org.gradle.jvmargs=-Xmx1G
 
 # Fabric Properties
 # check these on https://fabricmc.net/develop/
-minecraft_version=22w45a
-supported_minecraft_versions=22w45a
+minecraft_version=22w46a
+supported_minecraft_versions=22w46a
 loader_version=0.14.10
-yarn_mappings=22w45a+build.12
+yarn_mappings=22w46a+build.3
 quilt_mappings=3
 
 # Mod Properties
@@ -15,13 +15,14 @@ maven_group=pers.solid.extshape
 archives_base_name=extshape
 
 # Dependencies
-fabric_version=0.66.0+1.19.2
+fabric_version=0.66.4+1.19.3
 modmenu_version=5.0.0-alpha.2
 brrp_version=0.8.1-build.1
+brrp_mc_version=22w45a
 reasonable_sorting_version=2.1.0
 
 #loom_libraries_base=https://bmclapi2.bangbang93.com/maven/
-loom_resources_base=https://bmclapi2.bangbang93.com/assets/
-loom_version_manifests=https://bmclapi2.bangbang93.com/mc/game/version_manifest_v2.json
+#loom_resources_base=https://bmclapi2.bangbang93.com/assets/
+#loom_version_manifests=https://bmclapi2.bangbang93.com/mc/game/version_manifest_v2.json
 loom_experimental_versions=https://maven.fabricmc.net/net/minecraft/experimental_versions.json
 #loom_fabric_repository=https://repository.hanbings.io/proxy/
