适应 1.19.3（从 Fabric 分支中优选），并适应Forge

--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
 import com.modrinth.minotaur.dependencies.ModDependency
 
 plugins {
-    id 'dev.architectury.loom' version '0.12.0-SNAPSHOT'
+    id 'dev.architectury.loom' version '1.0-SNAPSHOT'
     id 'maven-publish'
     id 'io.github.juuxel.loom-quiltflower' version '1.7.+'
     id "com.modrinth.minotaur" version "2.+"
@@ -30,8 +30,26 @@ repositories {
 
     // 合理排序模组依赖的 Cloth Config
     maven { url "https://maven.shedaniel.me/" }
+    /*
+    这个是存储在 GitHub 上的 BRRP 模组
+    maven {
+        url 'https://raw.nuaa.cf/SolidBlock-cn/mvn-repo/main'
+    }*/
     // 合理排序和 BRRP 模组。这两个模组均存储于本地的 maven 仓库。
     mavenLocal()
+}
+
+loom {
+    runs {
+        server {
+        }
+        client {
+            programArg "-username=Solid"
+        }
+    }
+    forge {
+        mixinConfig "extshape.mixin.json"
+    }
 }
 
 dependencies {
@@ -44,23 +62,13 @@ dependencies {
     // 下面两个模组均存储于本地的 maven 仓库。
     // BRRP 模组
     def brrp_mc_version = project.properties.getOrDefault "brrp_mc_version", project.minecraft_version
-    modImplementation "net.devtech:brrp-forge:${project.brrp_version}-${brrp_mc_version}"
+    modImplementation "pers.solid:brrp-forge:${project.brrp_version}-${brrp_mc_version}"
     // 合理排序模组
     def reasonable_sorting_mc_version = project.properties.getOrDefault "reasonable_sorting_mc_version", project.minecraft_version
-    modImplementation "pers.solid.mod:reasonable-sorting-forge:${project.reasonable_sorting_version}-mc${reasonable_sorting_mc_version}"
-}
+    // modImplementation "pers.solid.mod:reasonable-sorting-forge:${project.reasonable_sorting_version}-mc${reasonable_sorting_mc_version}"
 
-loom {
-    forge {
-        mixinConfigs = [
-                "extshape.mixin.json"
-        ]
-    }
-    launches {
-        data {
-            arg "--existing", file("src/main/resources").absolutePath
-        }
-    }
+    // 由于新版的 Loom 没有 @CanIgnoreReturnValue 等注解，故在这里手动添加。
+    modImplementation "com.google.errorprone:error_prone_annotations:+"
 }
 
 processResources {
@@ -124,14 +132,20 @@ publishing {
         // Notice: This block does NOT have the same function as the block in the top level.
         // The repositories here will be used for publishing your artifact, not for
         // retrieving dependencies.
+        maven {
+            // 将模块导出至本地另一个项目的位置中，该项目与 GitHub 项目关联。
+            // 随后，推送那个项目至 GitHub 上。
+            url = 'file:../mvn-repo'
+        }
     }
 }
 
 
 modrinth {
     projectId = 'tb7kCxSW'
-    String platform = project.properties.getOrDefault 'loom.platform', 'fabric'
+    String platform = project.properties.getOrDefault 'loom.platform', 'forge'
     versionNumber = "${rootProject.mod_version}-${platform}-${rootProject.minecraft_version}"
+    versionType = 'release'
     uploadFile = remapJar
     gameVersions = (project.supported_minecraft_versions as String).split(',') as List<String>
     loaders = [platform]
