--- a/src/main/resources/META-INF/accesstransformer.cfg
+++ b/src/main/resources/META-INF/accesstransformer.cfg
@@ -1,6 +1,6 @@
 public net.minecraft.data.client.BlockStateModelGenerator createButtonBlockState(Lnet/minecraft/block/Block;Lnet/minecraft/util/Identifier;Lnet/minecraft/util/Identifier;)Lnet/minecraft/data/client/BlockStateSupplier;
 public net.minecraft.data.client.BlockStateModelGenerator createPressurePlateBlockState(Lnet/minecraft/block/Block;Lnet/minecraft/util/Identifier;Lnet/minecraft/util/Identifier;)Lnet/minecraft/data/client/BlockStateSupplier;
-public net.minecraft.data.server.BlockLootTableGenerator applyExplosionDecay(Lnet/minecraft/item/ItemConvertible;Lnet/minecraft/loot/function/LootFunctionConsumingBuilder;)Lnet/minecraft/loot/function/LootFunctionConsumingBuilder;
-public net.minecraft.data.server.BlockLootTableGenerator addSurvivesExplosionCondition(Lnet/minecraft/item/ItemConvertible;Lnet/minecraft/loot/condition/LootConditionConsumingBuilder;)Lnet/minecraft/loot/condition/LootConditionConsumingBuilder;
-public net.minecraft.data.server.BlockLootTableGenerator dropsWithSilkTouch(Lnet/minecraft/item/ItemConvertible;)Lnet/minecraft/loot/LootTable$Builder;
-public net.minecraft.data.server.BlockLootTableGenerator dropsWithSilkTouch(Lnet/minecraft/block/Block;Lnet/minecraft/loot/entry/LootPoolEntry$Builder;)Lnet/minecraft/loot/LootTable$Builder;
+public net.minecraft.data.server.loottable.BlockLootTableGenerator applyExplosionDecay(Lnet/minecraft/item/ItemConvertible;Lnet/minecraft/loot/function/LootFunctionConsumingBuilder;)Lnet/minecraft/loot/function/LootFunctionConsumingBuilder;
+public net.minecraft.data.server.loottable.BlockLootTableGenerator addSurvivesExplosionCondition(Lnet/minecraft/item/ItemConvertible;Lnet/minecraft/loot/condition/LootConditionConsumingBuilder;)Lnet/minecraft/loot/condition/LootConditionConsumingBuilder;
+public net.minecraft.data.server.loottable.BlockLootTableGenerator dropsWithSilkTouch(Lnet/minecraft/block/ItemConvertible;)Lnet/minecraft/loot/LootTable$Builder;
+public net.minecraft.data.server.loottable.BlockLootTableGenerator dropsWithSilkTouch(Lnet/minecraft/block/Block;Lnet/minecraft/loot/entry/LootPoolEntry$Builder;)Lnet/minecraft/loot/LootTable$Builder;
