--- a/gradle.properties
+++ b/gradle.properties
@@ -3,23 +3,23 @@ org.gradle.jvmargs=-Xmx1G
 loom.platform=forge
 
 # Fabric Properties
-# check these on https://fabricmc.net/develop/
-minecraft_version=1.19.2
-supported_minecraft_versions=1.19,1.19.1,1.19.2
-yarn_mappings=1.19.2+build.28
-forge_version=43.1.52
+# check these on https://files.minecraftforge.net/
+minecraft_version=1.19.3
+supported_minecraft_versions=1.19.3
+yarn_mappings=1.19.3+build.3
+forge_version=44.0.18
 
 # Mod Properties
-mod_version=1.7.1
+mod_version=1.8.0
 maven_group=pers.solid.extshape
 archives_base_name=extshape
 
 # Dependencies
-brrp_version=0.8.1
+brrp_version=0.8.2
 reasonable_sorting_version=2.1.0
 
 #loom_libraries_base=https://bmclapi2.bangbang93.com/maven/
-loom_resources_base=https://bmclapi2.bangbang93.com/assets/
-loom_version_manifests=https://bmclapi2.bangbang93.com/mc/game/version_manifest_v2.json
+#loom_resources_base=https://bmclapi2.bangbang93.com/assets/
+#loom_version_manifests=https://bmclapi2.bangbang93.com/mc/game/version_manifest_v2.json
 loom_experimental_versions=https://maven.fabricmc.net/net/minecraft/experimental_versions.json
 #loom_fabric_repository=https://repository.hanbings.io/proxy/
