修复与语言处理有关的问题

--- a/gradle.properties
+++ b/gradle.properties
@@ -3,10 +3,10 @@ org.gradle.jvmargs=-Xmx1G
 
 # Fabric Properties
 # check these on https://fabricmc.net/develop/
-minecraft_version=22w46a
-supported_minecraft_versions=22w46a
+minecraft_version=1.19.3-pre2
+supported_minecraft_versions=1.19.3-pre2
 loader_version=0.14.10
-yarn_mappings=22w46a+build.3
+yarn_mappings=1.19.3-pre2+build.1
 quilt_mappings=3
 
 # Mod Properties
@@ -15,10 +15,9 @@ maven_group=pers.solid.extshape
 archives_base_name=extshape
 
 # Dependencies
-fabric_version=0.66.4+1.19.3
-modmenu_version=5.0.0-alpha.2
-brrp_version=0.8.1-build.1
-brrp_mc_version=22w45a
+fabric_version=0.67.1+1.19.3
+modmenu_version=5.0.0-alpha.4
+brrp_version=0.8.1-build.3
 reasonable_sorting_version=2.1.0
 
 #loom_libraries_base=https://bmclapi2.bangbang93.com/maven/
