- 适应 0.8.1 的 BRRP 模组 - 调整方块标签，例如现在 `extshape:log_fences` 也属于 `minecraft:wooden_fences` 了。 - 为竹块、去皮竹块添加了扩展方块形状。为避免与竹板的冲突，在名称中，保留了“block”一词，如 `extshape:bamboo_bock_stairs`。且由于其纹理模式特殊，因此其台阶没有 axis 标签。 - 阻止竹块、去皮竹块合成按钮，以避免合成表冲突。 - 现在各方块都设置好了对应的合成表分类。 - 由于暂未支持，“显示专门物品组”按钮不可用。 - 相较于上一个测试版本，修复了更改“添加至原版物品组”配置后，物品栏未能更新的问题。 - 现在竹板和竹马赛克的相应方块都属于可燃方块。 - （技术性）不允许创建重复名称的标签，否则会出错。这是为了避免在数据生成时，新的标签覆盖了旧的，导致没有生效。 - 修复“竹板”“竹材”作为前缀时没有去掉“板”字和“材”字。 - 将 `extshape:config` 命令移动到 ExtShapeClient 中，尽管该命令似乎仍未生效。 - 继续修复部分配方名称错误的问题。

--- a/build.gradle
+++ b/build.gradle
@@ -11,7 +11,7 @@ sourceCompatibility = JavaVersion.VERSION_17
 targetCompatibility = JavaVersion.VERSION_17
 
 archivesBaseName = project.archives_base_name + "-fabric"
-version = project.mod_version + '-mc' + project.minecraft_version
+version = project.mod_version + '-mc1.19.3'
 group = project.maven_group
 
 repositories {
@@ -121,7 +121,7 @@ modrinth {
     projectId = 'tb7kCxSW'
     String platform = project.properties.getOrDefault 'loom.platform', 'fabric'
     versionNumber = "${rootProject.mod_version}-${platform}-${rootProject.minecraft_version}"
-    versionType = 'beta'
+    versionType = 'release'
     uploadFile = remapJar
     gameVersions = (project.supported_minecraft_versions as String).split(',') as List<String>
     loaders = [platform]
