--- a/gradle.properties
+++ b/gradle.properties
@@ -3,24 +3,25 @@ org.gradle.jvmargs=-Xmx1G
 
 # Fabric Properties
 # check these on https://fabricmc.net/develop/
-minecraft_version=1.19.3-pre2
-supported_minecraft_versions=1.19.3-pre2
-loader_version=0.14.10
-yarn_mappings=1.19.3-pre2+build.1
+minecraft_version=1.19.3-rc3
+supported_minecraft_versions=1.19.3-rc3
+loader_version=0.14.11
+yarn_mappings=1.19.3-rc3+build.1
 quilt_mappings=3
 
 # Mod Properties
-mod_version=1.7.2-build.1
+mod_version=1.7.2
 maven_group=pers.solid.extshape
 archives_base_name=extshape
 
 # Dependencies
-fabric_version=0.67.1+1.19.3
+fabric_version=0.68.1+1.19.3
 modmenu_version=5.0.0-alpha.4
-brrp_version=0.8.1-build.3
+brrp_version=0.8.1
+brrp_mc_version=1.19.3
 reasonable_sorting_version=2.1.0
 
-#loom_libraries_base=https://bmclapi2.bangbang93.com/maven/
+loom_libraries_base=https://bmclapi2.bangbang93.com/maven/
 #loom_resources_base=https://bmclapi2.bangbang93.com/assets/
 #loom_version_manifests=https://bmclapi2.bangbang93.com/mc/game/version_manifest_v2.json
 loom_experimental_versions=https://maven.fabricmc.net/net/minecraft/experimental_versions.json
