--- a/gradle.properties
+++ b/gradle.properties
@@ -3,22 +3,21 @@ org.gradle.jvmargs=-Xmx1G
 
 # Fabric Properties
 # check these on https://fabricmc.net/develop/
-minecraft_version=1.19.3-rc3
-supported_minecraft_versions=1.19.3-rc3
+minecraft_version=1.19.3
+supported_minecraft_versions=1.19.3
 loader_version=0.14.11
-yarn_mappings=1.19.3-rc3+build.1
-quilt_mappings=3
+yarn_mappings=1.19.3+build.2
+quilt_mappings=1
 
 # Mod Properties
-mod_version=1.7.2
+mod_version=1.7.3
 maven_group=pers.solid.extshape
 archives_base_name=extshape
 
 # Dependencies
 fabric_version=0.68.1+1.19.3
 modmenu_version=5.0.0-alpha.4
-brrp_version=0.8.1
-brrp_mc_version=1.19.3
+brrp_version=0.8.2
 reasonable_sorting_version=2.1.0
 
 loom_libraries_base=https://bmclapi2.bangbang93.com/maven/
