更改启动运行配置

--- a/build.gradle
+++ b/build.gradle
@@ -41,14 +41,15 @@ repositories {
 
 loom {
     runs {
-        server {
-        }
         client {
             programArg "-username=Solid"
         }
     }
     forge {
         mixinConfig "extshape.mixin.json"
+    }
+    runConfigs.configureEach {
+        it.configName = "Minecraft Forge ${it.name.capitalize()}"
     }
 }
 
