--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -13,7 +13,7 @@ issueTrackerURL = "https://github.com/SolidBlock-cn/extshape/issues" #optional
 modId = "extshape"
 # The version number of the mod - unlike in the Forge MDK,
 # we'll use the processResources task to replace this for us
-version = "${version}"
+version = "1.8.0"
 displayName = "Extended Block Shapes"
 # This URL will be queried by the Forge update checker in order to find the latest version of your mod.
 # If an update is found, you'll see a little blinking "emerald" symbol on your Mods button!
