修复方块集合缺失品红色和淡蓝色带釉陶瓦的问题，以及配置等其他问题

--- a/build.gradle
+++ b/build.gradle
@@ -66,7 +66,9 @@ dependencies {
     modImplementation "pers.solid:brrp-forge:${project.brrp_version}-${brrp_mc_version}"
     // 合理排序模组
     def reasonable_sorting_mc_version = project.properties.getOrDefault "reasonable_sorting_mc_version", project.minecraft_version
-    modImplementation "pers.solid.mod:reasonable-sorting-forge:${project.reasonable_sorting_version}-mc${reasonable_sorting_mc_version}"
+    modImplementation("pers.solid.mod:reasonable-sorting-forge:${project.reasonable_sorting_version}-mc${reasonable_sorting_mc_version}") {
+        exclude group: "net.minecraftforge"
+    }
 
     // 由于新版的 Loom 没有 @CanIgnoreReturnValue 等注解，故在这里手动添加。
     modImplementation "com.google.errorprone:error_prone_annotations:+"
