优化与 registry 有关的内容，以便于多平台（适应 Forge） 优化代码格式，修复代码中的一些问题 更新至 2.0.0-beta.1

--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -55,8 +55,8 @@ ordering = "NONE"
 side = "BOTH"
 
 [[dependencies.extshape]]
-modId = "better_runtime_resource_pack"
+modId = "brrp_v1"
 mandatory = true
-versionRange = "[0.8.2,)"
+versionRange = "[1.0.0-beta.2,)"
 ordering = "NONE"
 side = "BOTH"
