--- a/gradle.properties
+++ b/gradle.properties
@@ -2,24 +2,25 @@
 org.gradle.jvmargs=-Xmx1G
 
 # Fabric Properties
-# check these on https://fabricmc.net/develop/
+# check these on https://fabricmc.net/develop/ and https://linkie.shedaniel.me/
 minecraft_version=1.19.3
 supported_minecraft_versions=1.19.3
-loader_version=0.14.14
+loader_version=0.14.17
 yarn_mappings=1.19.3+build.5
 
 # Mod Properties
-mod_version=1.8.0
+mod_version=1.8.1
 maven_group=pers.solid.extshape
 archives_base_name=extshape
 
 # Dependencies
-fabric_version=0.68.1+1.19.3
-modmenu_version=5.+
-brrp_version=0.8.2
-reasonable_sorting_version=2.1.0
+fabric_version=0.76.0+1.19.3
+modmenu_version=5.1.0-beta.4
+brrp_version=0.9.0
 
-loom_libraries_base=https://bmclapi2.bangbang93.com/maven/
+# Loom Properties
+# If the build fails, try comment out or undo commenting some of the following lines.
+#loom_libraries_base=https://bmclapi2.bangbang93.com/maven/
 loom_resources_base=https://bmclapi2.bangbang93.com/assets/
 loom_version_manifests=https://bmclapi2.bangbang93.com/mc/game/version_manifest_v2.json
 loom_experimental_versions=https://maven.fabricmc.net/net/minecraft/experimental_versions.json
