适应带有 uvlock 的柱状方块台阶，暂时还没有适应竖直台阶

--- a/build.gradle
+++ b/build.gradle
@@ -137,7 +137,7 @@ modrinth {
     versionNumber = "${rootProject.mod_version}-${platform}-${rootProject.minecraft_version}"
     versionType = 'beta'
     uploadFile = remapJar
-    gameVersions = (project.supported_minecraft_versions as String).split(',') as List<String>
+    gameVersions = project.supported_minecraft_versions.isEmpty() ? List.of(rootProject.minecraft_version) : (project.supported_minecraft_versions as String).split(',') as List<String>
     loaders = [platform]
     var list = [new ModDependency('JnrDtPAE', 'required')]
     if (platform == 'fabric') list.add new ModDependency('P7dR8mSH', 'required')
