--- a/gradle.properties
+++ b/gradle.properties
@@ -6,10 +6,10 @@ org.gradle.jvmargs=-Xmx1G
 minecraft_version=23w07a
 supported_minecraft_versions=
 loader_version=0.14.14
-yarn_mappings=23w07a+build.2
+yarn_mappings=23w07a+build.3
 
 # Mod Properties
-mod_version=1.8.0
+mod_version=1.8.1-build.1
 maven_group=pers.solid.extshape
 archives_base_name=extshape
 
