--- a/gradle.properties
+++ b/gradle.properties
@@ -3,21 +3,23 @@ org.gradle.jvmargs=-Xmx1G
 
 # Fabric Properties
 # check these on https://fabricmc.net/develop/ and https://linkie.shedaniel.me/
-minecraft_version=1.19.4-pre3
-supported_minecraft_versions=1.19.4-pre3
+minecraft_version=1.19.4
+supported_minecraft_versions=1.19.4
 loader_version=0.14.17
-yarn_mappings=1.19.4-pre3+build.4
+yarn_mappings=1.19.4+build.1
 
 # Mod Properties
-mod_version=1.8.1-build.2
+mod_version=1.8.1
 maven_group=pers.solid.extshape
 archives_base_name=extshape
 
 # Dependencies
-fabric_version=0.75.2+1.19.4
-modmenu_version=6.1.0-beta.3
-brrp_version=0.9.0-build.2
+fabric_version=0.76.0+1.19.4
+modmenu_version=6.1.0-rc.4
+brrp_version=0.9.0
 
+# Loom Properties
+# If the build fails, try comment out or undo commenting some of the following lines.
 #loom_libraries_base=https://bmclapi2.bangbang93.com/maven/
 loom_resources_base=https://bmclapi2.bangbang93.com/assets/
 #loom_version_manifests=https://bmclapi2.bangbang93.com/mc/game/version_manifest_v2.json
