--- a/gradle.properties
+++ b/gradle.properties
@@ -5,23 +5,26 @@ org.gradle.jvmargs=-Xmx1G
 # check these on https://fabricmc.net/develop/ and https://linkie.shedaniel.me/
 minecraft_version=1.19.3
 supported_minecraft_versions=1.19.3
-loader_version=0.14.17
+loader_version=0.14.19
 yarn_mappings=1.19.3+build.5
 
 # Mod Properties
-mod_version=1.8.1
+mod_version=2.0.0
 maven_group=pers.solid.extshape
 archives_base_name=extshape
+archives_base_name_blockus=extshape_blockus
 
 # Dependencies
-fabric_version=0.76.0+1.19.3
+fabric_api_version=0.76.0+1.19.3
 modmenu_version=5.1.0-beta.4
-brrp_version=0.9.0
+brrp_version=1.0.0-beta.4
+blockus_version=4411968
+terraform_version=5.0.0
 
 # Loom Properties
 # If the build fails, try comment out or undo commenting some of the following lines.
-#loom_libraries_base=https://bmclapi2.bangbang93.com/maven/
-loom_resources_base=https://bmclapi2.bangbang93.com/assets/
-loom_version_manifests=https://bmclapi2.bangbang93.com/mc/game/version_manifest_v2.json
+loom_libraries_base=https://download.mcbbs.net/maven/
+loom_resources_base=https://download.mcbbs.net/assets/
+loom_version_manifests=https://download.mcbbs.net/mc/game/version_manifest_v2.json
 loom_experimental_versions=https://maven.fabricmc.net/net/minecraft/experimental_versions.json
-#loom_fabric_repository=https://repository.hanbings.io/proxy/
+loom_fabric_repository=https://repository.hanbings.io/proxy/
