--- a/gradle.properties
+++ b/gradle.properties
@@ -15,10 +15,10 @@ archives_base_name=extshape
 archives_base_name_blockus=extshape_blockus
 
 # Dependencies
-fabric_version=0.76.0+1.19.4
+fabric_api_version=0.76.0+1.19.4
 modmenu_version=6.1.0-rc.4
 brrp_version=0.9.0
-blockus_version=4437057
+blockus_version=4458023
 terraform_version=6.0.0-beta.1
 
 # Loom Properties
