--- a/gradle.properties
+++ b/gradle.properties
@@ -5,11 +5,11 @@ org.gradle.jvmargs=-Xmx1G
 # check these on https://fabricmc.net/develop/ and https://linkie.shedaniel.me/
 minecraft_version=1.19.4
 supported_minecraft_versions=1.19.4
-loader_version=0.14.17
+loader_version=0.14.19
 yarn_mappings=1.19.4+build.1
 
 # Mod Properties
-mod_version=1.9.0
+mod_version=2.0.0
 maven_group=pers.solid.extshape
 archives_base_name=extshape
 archives_base_name_blockus=extshape_blockus
@@ -17,7 +17,7 @@ archives_base_name_blockus=extshape_blockus
 # Dependencies
 fabric_api_version=0.76.0+1.19.4
 modmenu_version=6.1.0-rc.4
-brrp_version=0.9.0
+brrp_version=1.0.0-beta.2
 blockus_version=4458023
 terraform_version=6.0.0-beta.1
 
@@ -27,4 +27,4 @@ loom_libraries_base=https://download.mcbbs.net/maven/
 loom_resources_base=https://download.mcbbs.net/assets/
 loom_version_manifests=https://download.mcbbs.net/mc/game/version_manifest_v2.json
 loom_experimental_versions=https://maven.fabricmc.net/net/minecraft/experimental_versions.json
-#loom_fabric_repository=https://repository.hanbings.io/proxy/
+loom_fabric_repository=https://repository.hanbings.io/proxy/
