修复错误的 RecipeCategory（适应 1.19.3 以上版本）

--- a/gradle.properties
+++ b/gradle.properties
@@ -7,6 +7,7 @@ minecraft_version=1.19.4
 supported_minecraft_versions=1.19.4
 loader_version=0.14.19
 yarn_mappings=1.19.4+build.1
+fabric.loom.multiProjectOptimisation = true
 
 # Mod Properties
 mod_version=2.0.0
