runtest 没有 remapJar

--- a/build.gradle
+++ b/build.gradle
@@ -140,6 +140,10 @@ project(':runtest') {
     dependencies {
         implementation project(path: ':', configuration: "namedElements")
     }
+
+    remapJar {
+        enabled = false
+    }
 }
 
 
