--- a/gradle.properties
+++ b/gradle.properties
@@ -8,6 +8,8 @@ supported_minecraft_versions=1.17.1
 loader_version=0.14.19
 yarn_mappings=1.17.1+build.65
 
+fabric.loom.multiProjectOptimisation = true
+
 # Mod Properties
 mod_version=2.0.0
 maven_group=pers.solid.extshape
