runtest 没有 remapJar

--- a/build.gradle
+++ b/build.gradle
@@ -138,6 +138,10 @@ project(':runtest') {
         implementation project(path: ':', configuration: "namedElements")
         implementation project(path: ':with_blockus', configuration: "namedElements")
     }
+
+    remapJar {
+        enabled = false
+    }
 }
 
 
