runtest 没有 remapJar

--- a/gradle.properties
+++ b/gradle.properties
@@ -8,6 +8,8 @@ supported_minecraft_versions=1.18.2
 loader_version=0.14.19
 yarn_mappings=1.18.2+build.4
 
+fabric.loom.multiProjectOptimisation = true
+
 # Mod Properties
 mod_version=2.0.0
 maven_group=pers.solid.extshape
