--- a/gradle.properties
+++ b/gradle.properties
@@ -3,29 +3,29 @@ org.gradle.jvmargs=-Xmx1G
 
 # Fabric Properties
 # check these on https://fabricmc.net/develop/ and https://linkie.shedaniel.me/
-minecraft_version=1.19.4
-supported_minecraft_versions=1.19.4
+minecraft_version=1.20-pre1
+supported_minecraft_versions=1.20-pre1
 loader_version=0.14.19
-yarn_mappings=1.19.4+build.1
+yarn_mappings=1.20-pre1+build.7
 fabric.loom.multiProjectOptimisation = true
 
 # Mod Properties
-mod_version=2.0.0
+mod_version=2.0.0-beta.1
 maven_group=pers.solid.extshape
 archives_base_name=extshape
 archives_base_name_blockus=extshape_blockus
 
 # Dependencies
-fabric_api_version=0.78.0+1.19.4
-modmenu_version=6.1.0-rc.4
-brrp_version=1.0.0
-blockus_version=4483337
-terraform_version=6.0.0-beta.1
+fabric_api_version=0.80.3+1.20
+modmenu_version=
+brrp_version=1.0.0-beta.1
+blockus_version=
+terraform_version=
 
 # Loom Properties
 # If the build fails, try comment out or undo commenting some of the following lines.
-loom_libraries_base=https://download.mcbbs.net/maven/
-loom_resources_base=https://download.mcbbs.net/assets/
-loom_version_manifests=https://download.mcbbs.net/mc/game/version_manifest_v2.json
+loom_libraries_base=https://bmclapi2.bangbang93.com/maven/
+loom_resources_base=https://bmclapi2.bangbang93.com/assets/
+loom_version_manifests=https://bmclapi2.bangbang93.com/mc/game/version_manifest_v2.json
 loom_experimental_versions=https://maven.fabricmc.net/net/minecraft/experimental_versions.json
 loom_fabric_repository=https://repository.hanbings.io/proxy/
